--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ecommerce",
-  "proxy":"http://localhost:8000",
+  "proxy": "http://localhost:8000",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,10 +14,14 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
