--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.3",
+    "@paypal/paypal-js": "^5.1.1",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@reduxjs/toolkit": "^1.8.5",
     "formik": "^2.2.9",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
-
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux-devtools-extension": "^2.13.9",
